[package]
name = "konektor_db"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "db konektor"
repository = "https://github.com/AnggaSuherman/rust_client"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
griddb-sys = { version = "5.0.0", path = "griddb-sys" }
chrono = "0.4"
convert_case = "^0.3.0"